# zero-lliurex-flavours

./: Makefile  generate_legacy_po.sh  generate_po.sh  pyproject.toml  setup.py
banner-rsrc/: Makefile
debian/: changelog  control  copyright  links  postinst  rules  zero-lliurex-flavours.dirs  zero-lliurex-flavours.install  zero-lliurex-flavours.pkexec  zero-lliurex-flavours.pofiles  zero-lliurex-flavours.zero
lliurex-flavours-selector/: lliurex-flavours-selector
lliurex-flavours-selector-legacy/: lliurex-flavours-selector-legacy
lliurex-flavours-selector-legacy/python3-lliurexflavourselector/: Core.py  MainWindow.py  flavourSelectorManager.py  settings.py
lliurex-flavours-selector/lliurexflavourselector/: FlavourSelectorManager.py  FlavourStack.py  FlavoursModel.py  IconProvider.py  InstallStack.py  MainStack.py  UnInstallStack.py
lliurex-flavours-selector/python3-lliurexflavourselector/: Core.py  EmptyBox.py  FlavourSelectorManager.py  FlavourStack.py  FlavoursModel.py  InstallStack.py  InstallersBox.py  LoadingBox.py  MainStack.py  MainWindow.py  UnInstallStack.py  flavourSelectorManager.py  settings.py  waitingSpinner.py
lliurex-po/: generate_po.sh
lliurex-po/lliurex-flavours-selector/: ca@valencia.po  es.po  es_ES.po  lliurex-flavours-selector.pot
translations/: ca@valencia.po  es_ES.po  lliurex-flavours-selector.pot
zero-center-files/: zero-lliurex-flavours-legacy.app  zero-lliurex-flavours-legacy.zmd  zero-lliurex-flavours.app  zero-lliurex-flavours.zmd
zero-lliurex-flavours.zlaunchers/: zero-lliurex-flavours.app  zero-lliurex-flavours.zmd
(+85 files in other folders)
